--- a/tests/suite/x509paths/README
+++ b/tests/suite/x509paths/README
@@ -13,9 +13,6 @@ currently.
 See the PDF for information regarding the self tests.  Particular
 comments on individual tests below.  The 'XXX' marks real bugs.
 
-Chain 13-14,65: We probably should not fail fatally, although this is
-not a real problem.
-
 Chain 15-18: We should succeed, the reason we don't is that we use
 memcmp for DN comparisons.
 
@@ -31,4 +28,4 @@ Chain 31-32: The CRL is issued by a issuer without CRLSign
 real problem. This is easier to be supported now with the trust_list
 that can verify CRLs on addition.
 
-Chain 54-63: We don't check path length constraints properly. XXX
+Chain 54-55,58-61: We don't check path length constraints properly. XXX
