Added Andy Polyakov's version of AES-NI optimizations.

--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ See the end for copying conditions.
 * Version 2.99.1 (unreleased)
 
 ** libgnutls: Added support for AES-NI if detected. Uses
-Intel AES-NI code.
+Andy Polyakov's AES-NI code.
 
 ** libgnutls-extra: Dropped support of LZO compression via liblzo.
 
