--- a/NEWS
+++ b/NEWS
@@ -20,10 +20,10 @@ Reported by Herbert J. Skuhra.
 
 * tests: More fixes and updates for win32. Patches by LRN.
 
+* libgnutls: Several files unnecessarily included <gcrypt.h>; this has been fixed.
+
 ** API and ABI modifications:
 gnutls_transport_set_global_errno: DEPRECATED
-
-** Several files unnecessarily included <gcrypt.h>; this has been fixed.
 
 
 * Version 2.12.2 (released 2011-04-08)
