--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ See the end for copying conditions.
 
 * Version 2.12.3 (unreleased)
 
+* libgnutls: Several minor bugfixes.
+
 * libgnutls: Restored HMAC-MD5 for compatibility. Although considered 
 weak, several sites require it for connection. It is enabled for
 "NORMAL" and "PERFORMANCE" priority strings.
