--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 2.99.1 (unreleased)
+* Version 2.99.1 (released 2011-04-23)
 
 ** libgnutls: Added support for AES-NI if detected. Uses
 Andy Polyakov's AES-NI code.
@@ -21,9 +21,14 @@ function required GnuTLS to access system specific data, for no reason.
 Use gnutls_transport_set_errno(), or your system's errno fascility
 instead.
 
+** libgnutls: Added gnutls_certificate_set_retrieve_function2()
+to set a callback to retrieve a certificate. The certificate is
+received in a format that requires no processing from gnutls thus
+it is suitable when performance is required.
+
 ** API and ABI modifications:
 gnutls_transport_set_global_errno: REMOVED
-
+gnutls_certificate_set_retrieve_function2: ADDED
 
 * Version 2.99.0 (released 2011-04-09)
 
