--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,15 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 2.12.4 (unreleased)
+
+** libgnutls: Added gnutls_certificate_get_issuer() to
+compensate for the deprecated gnutls_certificate_get_x509_cas().
+
+** API and ABI modifications:
+gnutls_certificate_get_issuer: ADDED
+
+
 * Version 2.12.3 (released 2011-04-22)
 
 * libgnutls: Several minor bugfixes.
