_gnutls_hostname_compare() was incredibly slow when over ten wildcards were present. Set a limit on 6 wildcards to avoid any denial of service attack. Reported by Kalle Olavi Niemitalo.

--- a/THANKS
+++ b/THANKS
@@ -112,6 +112,7 @@ Micah Anderson			<micah [at] riseup.net>
 Michael Rommel			<rommel [at] layer-7.net>
 Mark Brand			<mabrand [at] mabrand.nl>
 Vitaly Kruglikov		<vitaly.kruglikov [at] palm.com>
+Kalle Olavi Niemitalo 		<kon [at] iki.fi>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
