--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,18 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 2.12.5 (unreleased)
+
+** certtool: Can now load private keys and public keys from PKCS #11 tokens
+via URLs.
+
+** libgnutls: gnutls_pkcs11_privkey_import_url() will now correctly read
+the public key algorithm of the key.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 2.12.4 (released 2011-05-06)
 
 ** libgnutls: Added gnutls_certificate_get_issuer() to
