--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -24,7 +24,7 @@ the following subsections.
 * Headers::
 * Initialization::
 * Version check::
-* Debugging::
+* Debugging and auditing::
 * Building the source::
 @end menu
 
@@ -66,14 +66,22 @@ with the dynamic linker an old version is actually used.  So you may
 want to check that the version is okay right after program startup.
 See the function @ref{gnutls_check_version}.
 
-@node Debugging
-@subsection Debugging
+@node Debugging and auditing
+@subsection Debugging and auditing
 
 In many cases things may not go as expected and further information,
-to assist debugging, from @acronym{GnuTLS} is desired. Those are the
-case where the @ref{gnutls_global_set_log_level} and
+to assist debugging, from @acronym{GnuTLS} is desired. 
+Those are the cases where the @ref{gnutls_global_set_log_level} and
 @ref{gnutls_global_set_log_function} are to be used. Those will print
 verbose information on the @acronym{GnuTLS} functions internal flow.
+
+
+When debugging is not required, important issues, such as detected
+attacks on the protocol still need to be logged. This is provided
+by @ref{gnutls_global_set_audit_log_function}, that uses a logging
+function that accepts the detected error message and the corresponding
+TLS session. The session information might be used to derive IP addresses
+or other information about the peer involved.
 
 @node Building the source
 @subsection Building the Source
