--- a/doc/cha-preface.texi
+++ b/doc/cha-preface.texi
@@ -225,12 +225,13 @@ For code contributions, a number of style guides will help you:
 @itemize @bullet
 
 @item Coding Style.
-Follow the GNU Standards document (@pxref{top, GNU Coding Standards,,
-standards}).
+Follow the GNU Standards document.
+@c (@pxref{top, GNU Coding Standards,,standards}).
 
 If you normally code using another coding standard, there is no
 problem, but you should use @samp{indent} to reformat the code
-(@pxref{top, GNU Indent,, indent}) before submitting your work.
+@c (@pxref{top, GNU Indent,, indent}) 
+before submitting your work.
 
 @item Use the unified diff format @samp{diff -u}.
 
